--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
     // glide
     implementation "com.github.bumptech.glide:glide:$versions.glideVersion"
-    implementation project(path: ':Gin')
+    implementation project(path: ':gin')
     kapt "com.github.bumptech.glide:compiler:$versions.glideVersion"
     // adapter
     implementation "com.github.skydoves:baserecyclerviewadapter:$versions.baseAdapter"
