--- a/gradle.properties
+++ b/gradle.properties
@@ -10,10 +10,10 @@ kotlin.code.style=official
 systemProp.org.gradle.internal.publish.checksums.insecure=true
 
 # Maven
-GROUP=com.github.wzasd
+GROUP=io.github.wzasd
 POM_PACKAGING=aar
 
-VERSION_NAME=1.0.0-SNAPSHOT
+VERSION_NAME=1.0.0
 
 POM_ARTIFACT_ID=gin
 POM_NAME=gin
@@ -31,3 +31,4 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=wzasd
 POM_DEVELOPER_NAME=Jeffrey wang
 POM_DEVELOPER_URL=https://github.com/wzasd/
+
